# libman

./: .gitignore  CMakeLists.txt  conanfile.py
cmake/: ConanConfig.cmake  libman.cmake
data/: CMakeLists.txt  spec.bs
docs/: CMakeLists.txt  conf.py  files.rst  format.rst  index-file.rst  index.rst  intro.rst  library-file.rst  overview.rst  package-file.rst
docs/_static/: custom.css
extras/: CMakeLists.txt
extras/libman-py/: .gitignore  .pylintrc  CMakeLists.txt  Pipfile  mypy.ini  setup.py  tox.ini
extras/libman-py/libman/: __main__.py  data.py  data_test.py  main.py  parse.py  parse_test.py
extras/libman_conan/: .gitignore  conanfile.py
extras/libman_conan/lm_conan/: __init__.py  cmake.py  generator.py
extras/libman_conan/test_package/: CMakeLists.txt  conanfile.py  something.cpp  something.lml.in
extras/libman_conan/test_package/src/foo/: bar.hpp
lm_conan/: cmake.py  data.py  export.py  generator.py  vs.py
src/: CMakeLists.txt
src/lm/: lm.cpp  lm.hpp
test_package/: CMakeLists.txt  LibManTest.lmp.in  conanfile.py
tests/: CMakeLists.txt  RunProjectTest.cmake  my_test.cpp  test-main.cpp
tests/export-simple/: CMakeLists.txt
tests/import-empty/: CMakeLists.txt
tests/import-export/: RunTest.cmake
tests/import-export/app/: CMakeLists.txt  main.cpp
tests/import-simple/: CMakeLists.txt  INDEX.lmi  main.cpp
tests/import-simple/subdir/: simple-lib.lml  simple.lmp
tests/import-simple/subdir/header-dir/: super-simple-lib.hpp
tests/just-include/: CMakeLists.txt
